--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-elements": "^3.4.3",
+    "react-native-paper": "^5.1.2",
+    "react-native-safe-area-context": "^4.4.1",
     "react-redux": "^8.0.5"
   },
   "devDependencies": {
